--- a/index.css
+++ b/index.css
@@ -1,3 +1,8 @@
+html{
+    margin: 0;
+    padding: 0;
+    height: 100%;
+}
 body{
     background-color: grey;
     font-family: 'Roboto', sans-serif;
@@ -5,8 +10,11 @@ body{
     font-weight: 400;
     line-height: 1.5;
     color: #292b2c;
+    overflow-x: hidden;
 }
-
+body::-webkit-scrollbar {
+    width: 0;
+}
 .header{
     background-color: #0c7eef;
     padding: 20px 10px;
@@ -70,23 +78,45 @@ body{
     background-color: #0074D9;
 }
 
+.skill-images{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin: 0 -10px;
+}
+.skill-images img{
+    width: 70px;
+    height: 70px;
+    margin: 10px;
+}
 .projects h1{
     text-align: center;
     margin-bottom: 10px;
 }
+.project-summary{
+    display: inline-block;
+    justify-content: right;
+    flex-wrap: wrap;
+    margin: 0 -10px;
+}
 .project-card-left{
     background-color: #56595b;
     border-radius: 10px;
-    text-align: left;
+    /* text-align: left; */
     margin: 20px;
     opacity: 0;
     transform: translateX(-100%);
+}
+.project-card-left img, .project-card-right img{
+    width: 1000px;
+    height: 250px;
+    border-radius: 10px 10px 0 0;
 }
 
 .project-card-right{
     background-color: #0074D9;
     border-radius: 10px;
-    text-align: right;
+    /* text-align: right; */
     margin: 20px;
     opacity: 0;
     transform: translateX(100%);
@@ -121,4 +151,11 @@ body{
 }
 .project-card-right.animate-right {
     animation: slideInFromRight 1s ease forwards;
+}
+
+.work_experience{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin: 0 -10px;
 }
