--- a/index.css
+++ b/index.css
@@ -111,6 +111,23 @@ body::-webkit-scrollbar {
     max-height: 60vh;
     overflow: hidden; 
 }
+.project-card-right{
+    background-color: #0074D9;
+    border-radius: 10px; 
+    text-align: left; 
+    margin: 20px;
+    opacity: 0;
+    transform: translateX(100%);
+    flex-basis: 50%;
+    max-height: 60vh;
+    overflow-y: scroll; 
+
+    /* width: 50%; */
+    /* height: auto;
+    border-radius: 10px 10px 0 0;
+    max-width: 1000px;
+    margin: 0 auto;  */
+}
 .project-card-left img, .project-card-right img{
     width: 50%;
     height: auto;
@@ -121,7 +138,11 @@ body::-webkit-scrollbar {
 .project-summary,
 .project-image {
     flex: 1;
-    padding: 10px;
+    padding: 20px;
+    overflow-y: scroll;
+    max-height: calc(100vh - 40px); /* Adjust as needed */
+    /* border: 1px solid #121111; */
+    box-sizing: border-box;
 }
 
 .project-summary img{
@@ -137,17 +158,7 @@ body::-webkit-scrollbar {
     display: flex;
     width: 100%;
 }
-.project-card-right{
-    background-color: #0074D9;
-    border-radius: 10px;
-    /* text-align: right; */
-    margin: 20px;
-    opacity: 0;
-    transform: translateX(100%);
-    flex-basis: 50%;
-    max-height: 60vh;
-    overflow: hidden; 
-}
+
 .project-card-left h2,
 .project-card-right h2 {
     text-align: center; /* Center align only h1 elements */
@@ -185,4 +196,10 @@ body::-webkit-scrollbar {
     justify-content: center;
     /* flex-wrap: wrap; */
     margin: 0 -10px;
+}
+
+.summary-text{
+    max-height: calc(50vh - 40px) !important; /* Adjust as needed */
+    overflow-y: scroll !important;
+
 }
