--- a/index.css
+++ b/index.css
@@ -2,24 +2,26 @@ html{
     margin: 0;
     padding: 0;
     height: 100%;
-    
+    overscroll-behavior: none;
 }
 body{
-    background-color: grey !important;
+    background-color: #e8e8e8 !important;
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
     font-weight: 400;
     line-height: 1.5;
     color: #292b2c;
     overflow-x: hidden;
+    overscroll-behavior: none;
 }
 body::-webkit-scrollbar {
     width: 0;
 }
 .header{
-    background-color: #0c7eef;
+    background-color: #333;
+    color: 	#e8e8e8;
     padding: 20px 10px;
-    border-bottom: 1px solid #5caaf7;
+    /* border-bottom: 1px solid #b7b7b7; */
     border-radius: 5px;
     text-align: center;
 }
@@ -76,7 +78,7 @@ body::-webkit-scrollbar {
 }
 
 .skill-card:hover {
-    background-color: #0074D9;
+    background-color:#b7b7b7;
 }
 
 .skill-images{
@@ -112,7 +114,7 @@ body::-webkit-scrollbar {
     overflow: hidden; 
 }
 .project-card-right{
-    background-color: #0074D9;
+    background-color: #e8e8e8;
     border-radius: 10px; 
     text-align: left; 
     margin: 20px;
