--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@ html{
     overscroll-behavior: none;
 }
 body{
-    background-color: #e8e8e8 !important;
+    background-color: #4B6D90!important;
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
     font-weight: 400;
@@ -18,8 +18,8 @@ body::-webkit-scrollbar {
     width: 0;
 }
 .header{
-    background-color: #333;
-    color: 	#e8e8e8;
+    background-color: #192740;
+    color: 	#85AED0;
     padding: 20px 10px;
     /* border-bottom: 1px solid #b7b7b7; */
     border-radius: 5px;
@@ -46,6 +46,8 @@ body::-webkit-scrollbar {
 .title{
     text-align: center;
     margin-bottom: 10px;
+    margin-top: 10px;
+
 }
 
 .skills {
@@ -58,8 +60,8 @@ body::-webkit-scrollbar {
     flex: 0 0 calc(25% - 20px);
     margin: 0 10px;
     padding: 20px;
-    background-color: #333;
-    color: white;
+    background-color: #192740;
+    color: #B8D1E0;
     transition: background-color 0.3s;
     border-radius: 10px;
     box-sizing: border-box;
@@ -103,7 +105,8 @@ body::-webkit-scrollbar {
     margin: 0 -10px;
 }
 .project-card-left{
-    background-color: #56595b;
+    background-color: #85AED0;
+    color: #192740;
     border-radius: 10px;
     /* text-align: left; */
     margin: 20px;
@@ -113,15 +116,28 @@ body::-webkit-scrollbar {
     max-height: 60vh;
     overflow: hidden; 
 }
+.project-card-left2{
+    background-color: #85AED0;
+    color: #192740;
+    border-radius: 10px;
+    /* text-align: left; */
+    margin: 20px;
+    opacity: 0;
+    transform: translateX(-100%);
+    flex-basis: 50%;
+    /* max-height: 60vh;
+    overflow: hidden;  */
+}
 .project-card-right{
-    background-color: #e8e8e8;
+    background-color: #192740;
+    color: #B8D1E0;
     border-radius: 10px; 
     text-align: left; 
     margin: 20px;
     opacity: 0;
     transform: translateX(100%);
     flex-basis: 50%;
-    max-height: 60vh;
+    max-height: 80vh;
     overflow-y: scroll; 
 
     /* width: 50%; */
@@ -142,7 +158,7 @@ body::-webkit-scrollbar {
     flex: 1;
     padding: 20px;
     overflow-y: scroll;
-    max-height: calc(100vh - 40px); /* Adjust as needed */
+    max-height: calc(70vh - 40px); /* Adjust as needed */
     /* border: 1px solid #121111; */
     box-sizing: border-box;
 }
@@ -186,9 +202,10 @@ body::-webkit-scrollbar {
         transform: translateX(0);
     }
 }
-.project-card-left.animate-left {
+.project-card-left.animate-left, .project-card-left2.animate-right {
     animation: slideInFromLeft 1s ease forwards;
 }
+
 .project-card-right.animate-right {
     animation: slideInFromRight 1s ease forwards;
 }
@@ -203,5 +220,58 @@ body::-webkit-scrollbar {
 .summary-text{
     max-height: calc(50vh - 40px) !important; /* Adjust as needed */
     overflow-y: scroll !important;
+
+}
+
+.card{
+    width: 30%;
+    height: 25%;
+    margin-right: 20px;
+    border: none;
+}
+.accordion-body{
+    background-color: #B8D1E0;
+    color:#192740;
+}
+
+.accordion-button{
+    background-color:#85AED0 !important;
+    color:#192740;
+}
+.card .card-header{
+    background-color: #85AED0;
+    border: none;
+}
+.card-body{
+    background-color: #192740;
+    color:#85AED0 !important;
+    border: none;
+
+
+}
+
+.headshot{
+    width : 400px;
+    height: 250px;
+}
+
+.main-description{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: center;
+
+}
+.summary{
+    padding-left: 30px;
+    padding-right: 30px;
+    text-align: center;
+
+
+
+}
+.visuals{
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 
 }
